--- a/InsecureWebApp/Pages/Index.cshtml
+++ b/InsecureWebApp/Pages/Index.cshtml
@@ -15,7 +15,7 @@
             <div class="col-lg-7 mx-auto order-lg-2 py-5">
                 <div class="site-block-cover-content text-center">
                     <h2 class="sub-title">Local Service, Global Reach</h2>
-                    <h1 class="main-title">Welcome To IWA.NET Pharmacy Direct</h1>
+                    <h1 class="main-title">Welcome To L-Mobile</h1>
                 </div>
                 <div class="jumbotron text-center" style="opacity: 0.9">
                     @if (SignInManager.IsSignedIn(User))
