--- a/InsecureWebApp/Pages/Index.cshtml
+++ b/InsecureWebApp/Pages/Index.cshtml
@@ -9,7 +9,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-<div class="site-blocks-cover" style="background-image: url('/img/home_hero_1a.jpg');">
+<div class="site-blocks-cover" style="background-image: url('/img/home_hero_mobile.jpg');">
     <div class="container">
         <div class="row">
             <div class="col-lg-7 mx-auto order-lg-2 py-5">
