--- a/InsecureWebApp/Pages/Shared/_HeaderPartial.cshtml
+++ b/InsecureWebApp/Pages/Shared/_HeaderPartial.cshtml
@@ -19,7 +19,7 @@
             <div class="logo">
                 <div class="site-logo">
                     <a class="navbar-brand js-logo-clone" asp-page="/Index">
-                        <img src="~/img/logo.png" alt="IWA Pharmacy Direct">
+                        <img src="~/img/logo-mobile.png" alt="IWA Pharmacy Direct">
                     </a>
                 </div>
             </div>
