--- a/InsecureWebApp/Pages/Shared/_SecondaryPartial.cshtml
+++ b/InsecureWebApp/Pages/Shared/_SecondaryPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="site-section bg-secondary bg-image" style="background-image: url(/img/bg_2.jpg);">
+﻿<div class="site-section bg-secondary bg-image" style="background-image: url(/img/bg_3.avif);">
     <div class="container">
         <div class="row align-items-stretch">
             <div class="col-lg-6 mb-5 mb-lg-0">
@@ -12,7 +12,7 @@
                 </a>
             </div>
             <div class="col-lg-6 mb-5 mb-lg-0">
-                <a href="#" class="banner-1 h-100 d-flex" style="background-image: url(/img/bg_2.jpg);">
+                <a href="#" class="banner-1 h-100 d-flex" style="background-image: url(/img/bg_3.avif);">
                     <div class="banner-1-inner ml-auto align-self-center">
                         <h2>Expert Advice</h2>
                         <p>
