--- a/InsecureWebApp/Pages/Shared/_FooterPartial.cshtml
+++ b/InsecureWebApp/Pages/Shared/_FooterPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿<footer class="site-footer mt-auto">
     <div class="row">
         <div class="col-md-3 footer-brand animated fadeInLeft">
-            <h4>IWA.NET Pharmacy Direct</h4>
-            <p>IWA.NET (Insecure Web App) Pharmacy Direct is a deliberately insecure DotNet web application for use in <a href="https://www.microfocus.com/en-us/cyberres/application-security">Fortify Application Security demonstrations</a>.</p>
+            <h4>L-Mobile</h4>
+            <p>La digitalisation avec L-mobile <a href="https://www.microfocus.com/en-us/cyberres/application-security">Fortify Application Security demonstrations</a>.</p>
             <p>
                 © Open Text Corporation 2023. All Rights Reserved.<br/> Pharma Template by
                 <a href="https://colorlib.com" target="_blank" class="text-info">Colorlib</a>
