--- a/InsecureWebApp/Pages/Shared/_Layout.cshtml
+++ b/InsecureWebApp/Pages/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 @*    <meta http-equiv="Content-Type" content="text/html; charset=UTF-7" />*@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>@ViewData["Title"] - IWA.NET Pharmacy Direct</title>
+    <title>@ViewData["Title"] - L-Mobile</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
     <!--link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.min.css" type="text/css" /-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
